refactor: abstract queries, enable multiple
